# multi-kakiokoshi-inference

./: main.py  predict_and_decode.py  pyproject.toml
ngram/: 5gram_correct_ady.binary  5gram_correct_bas.binary  5gram_correct_bxk.binary  5gram_correct_cgg.binary  5gram_correct_lth.binary  5gram_correct_mmc.binary  5gram_correct_qxp.binary  5gram_correct_rwm.binary  5gram_correct_tob.binary  5gram_correct_top.binary  5gram_correct_ttj.binary  5gram_correct_ukv.binary  5gram_correct_ush.binary
ngram/experiments/: main_experiment.py  run.sh
spm500-5gram-binary/: sp-5gram-lth.binary  sp-5gram-tob.binary
