[project]
name = "multi-kakiokoshi-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "datasets==3.6.0",
    "librosa>=0.11.0",
    "numpy>=1.26.4",
    "protobuf>=6.33.2",
    "pyctcdecode>=0.5.0",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
